# modelisationC-

./: .gitignore  CMakeLists.txt  Dvector  Dvector.cpp  Dvector.h  Makefile  Operator_test.cpp  README  README.md  subject.sh  test1.txt  test2.txt
Visu_template/: main.cxx  ocean.hxx  window.cxx  window.hxx
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  Dvector.cpp  Dvector.h  ErreurAcces.h  ErreurAllocation.h  GerstnerWave.cpp  GerstnerWave.h  GerstnerWaveModel.cpp  GerstnerWaveModel.h  GestnerWave.cpp  Height.cpp  Height.h  Makefile  Matrice.cpp  Ocean.cpp  Ocean.h  PhilipsWaveModel.cpp  PhilipsWaveModel.h  TemplateDvector.cpp  TemplateDvector.h  TemplateDvectorMethods.h  WaveModel.cpp  WaveModel.h  camera.cxx  camera.hxx  gl_defs.hxx  main.cxx  window.cxx  window.hxx
test/: CMakeLists.txt  Dvector_test.cpp  Dvector_test.h  GerstnerWaveModel_test.cpp  GerstnerWave_test.cpp  Gerstner_test.cpp  Height_test.cpp  Ocean_test.cpp  Operator_test.cpp  PhilipsWaveModel_test.cpp  TemplateDvector_test.cpp
